#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============

Tag: V00-04-12
2016-12-12 TJ and Chris
- thisFiducialOnly to this_fiducial_only

Tag: V00-04-11
2016-12-12 Christopher O'Grady
- add support to not crash when detector is missing

Tag: V00-04-10
2016-12-09 Jacob Scott and Christopher O'Grady
- in common mode test, set parameters to nominal default values,
  since test data has them over-ridden by calib-dir values.

Tag: V00-04-09
2016-12-09 Jacob Scott and Christopher O'Grady
- add test in detectortest for cspad common mode

Tag: V00-04-08
2016-12-9 David Schneider
- add HX2-BEAMMON-01 to detector xface for pdsdata 8.6.19
	
Tag: V00-04-07
2016-12-08 Mikhail S. Dubrovin
- eliminate printout from DCStore
	
Tag: V00-04-06
2016-12-07 Jacob Scott and Christopher O'Grady
- add support for calling common mode algorithm cm_epix.py in PyDetectorAccess.py and AreaDetector.py

Tag: V00-04-05
2016-12-05 Christopher O'Grady
- add new flag for evr eventCodes method that allows returning of only
  eventcodes that were sent on precisely this fiducial

Tag: V00-04-04
2016-11-22 Mikhail S. Dubrovin
- add fallback support for geometry from DCS
  - AreaDetector - in all geometry methods pass par to self.pyda object
  - PyDetectorAccess - move part of geoaccess to geoaccess_calib, add geoaccess_dcs

Tag: V00-04-03
2016-11-17 Mikhail S. Dubrovin
- add ex_cspad_common_mode.py
- AreaDetector.py
  - pass par/evt in stead of rnum to get constants from calib store
  - improve self doc
- PyDetectorAccess.py - switch to using	cps.CreateForEvtEnv for DCS fallback
	
Tag: V00-04-02
2016-11-14 Christopher O'Grady
- Add new SXR-AIN-01 bld.

Tag: V00-04-01